syntax = "proto3";

option java_package = "com.technorapper.onboarding";
option java_multiple_files = true;

message UserStore {
    string user_id = 1;
    string session_token_id = 2;
}